# oneshot_fantasy

./: .gitignore  .mcp.json  Makefile  README.md
backend/: .env.example  README.md  crontab.example  docker-compose.yml  pyproject.toml
backend/app/: __init__.py  config.py  main.py
backend/app/api/: __init__.py  deps.py  health.py  router.py
backend/app/api/v1/: __init__.py  fantasy.py  (+3 more)
backend/app/application/: __init__.py  fantasy_service.py  scoring_service.py  tournament_service.py
backend/app/domains/: __init__.py
backend/app/infrastructure/: __init__.py  database.py  db_connectivity.py
backend/app/worker/: __init__.py  bootstrap.py  logging_setup.py
backend/ingestion/: INGESTERS.md  __init__.py
backend/ingestion/clients/: nba_client.py  nba_game_client.py  nba_game_stats_client.py  nba_playoffs_client.py  nba_stats_client.py  nba_team_client.py
backend/ingestion/db/: connection.py
backend/ingestion/scoring/: aggregated_scoring.py  scoring_config_loader.py  scoring_engine.py  test_scoring_engine.py
backend/ingestion/scripts/: import_nba_game_stats.py  import_nba_games.py  import_nba_participations.py  import_nba_players.py  import_nba_playoffs.py  import_nba_stats.py  import_nba_teams.py
backend/ingestion/services/: game_importer.py  game_stats_importer.py  player_importer.py  player_stats_importer.py  playoffs_importer.py  team_importer.py  tournament_participation_importer.py
backend/scripts/: __init__.py  compute_scores.py  import_aggregated_scores.py  import_nba_players.py  score_batch.py  sync_data.py
backend/sql/: schema.sql
(+155 files in other folders)
